fix: quick-strategy-currency-alignment

--- a/packages/bot-web-ui/src/pages/bot-builder/quick-strategy/quick-strategy.scss
+++ b/packages/bot-web-ui/src/pages/bot-builder/quick-strategy/quick-strategy.scss
@@ -356,7 +356,7 @@
                 display: flex;
                 flex-direction: row-reverse;
 
-                @include mobile() {
+                @include mobile-tablet-mix {
                     top: -2.8rem;
                     right: 4rem;
                 }
